// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders default correctly 1`] = `
<DocumentFragment>
  <button
    class="sc-hLBbgP sc-jSUZER gtEhoc"
    data-autoid="Default_button"
  >
    <span
      class="sc-eDvSVe kkVuRm"
      data-autoid=""
    >
      Default
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders icon correctly 1`] = `
<DocumentFragment>
  <button
    class="sc-hLBbgP sc-jSUZER gtEhoc"
    data-autoid="Secondary_button"
  >
    <div
      class="sc-gswNZR hNMjxf sc-dkrFOg bZrWwT"
      data-autoid="github_icon"
    >
      <svg
        data-name="fallback-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <line
          x1="12"
          x2="12.01"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
    <span
      class="sc-eDvSVe kkVuRm"
      data-autoid=""
    >
      Secondary
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders icon only correctly 1`] = `
<DocumentFragment>
  <button
    class="sc-hLBbgP sc-jSUZER gtEhoc"
    data-autoid="_button"
  >
    <div
      class="sc-gswNZR hNMjxf sc-dkrFOg gpmtnr"
      data-autoid="github_icon"
    >
      <svg
        data-name="fallback-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <line
          x1="12"
          x2="12.01"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
    <span
      class="sc-eDvSVe kkVuRm"
      data-autoid=""
    />
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders primary correctly 1`] = `
<DocumentFragment>
  <button
    class="sc-hLBbgP sc-jSUZER cPyLBp"
    data-autoid="Primary_button"
  >
    <span
      class="sc-eDvSVe kkVuRm"
      data-autoid=""
    >
      Primary
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> renders secondary correctly 1`] = `
<DocumentFragment>
  <button
    class="sc-hLBbgP sc-jSUZER gEuzsH"
    data-autoid="Secondary_button"
  >
    <span
      class="sc-eDvSVe kkVuRm"
      data-autoid=""
    >
      Secondary
    </span>
  </button>
</DocumentFragment>
`;
